feat: simple ui handler (#42)
* feat: add simple ui handler

* chore: move index.html

* resolve review

* chore: feedback

* chore: avoid dup search

* revert prev copilot suggestion, fix later

* chore: add noredirect params and adjust ui

* chore: ux

* chore: fix wrong curremtLemma

* chore: add headers on noredirect

* bump salome
