# internal/swagger/swagger.json
@@ -17,6 +17,12 @@
                         "description": "if raw is true, any rendered unicode character (for 𝗯𝗼𝗹𝗱/𝘪𝘵𝘢𝘭𝘪𝘤/etc) will be replaced by HTML tags instead.",
                         "name": "raw",
                         "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "if noredirect is true, return the lemma instead of redirecting.",
+                        "name": "noredirect",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -95,6 +101,12 @@
                         "type": "boolean",
                         "description": "if raw is true, any rendered unicode character (for 𝗯𝗼𝗹𝗱/𝘪𝘵𝘢𝘭𝘪𝘤/etc) will be replaced by HTML tags instead.",
                         "name": "raw",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "if noredirect is true, return the lemma instead of redirecting.",
+                        "name": "noredirect",
                         "in": "query"
                     }
                 ],
